removed trailing comma

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Albin Larsson",
-            "homepage": "http://abbe98.github.io/",
+            "homepage": "http://abbe98.github.io/"
         }
     ],
     "require": {
